--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1011,6 +1011,10 @@
     "defaultMessage": "Verify OTP and proceed",
     "description": "verify otp button"
   },
+  "GTbLDX": {
+    "defaultMessage": "You can use HackerKid to play, learn and solve a certain amount of problems for free. You can Get Unlimited Access @ ₹1499 and learning by purchasing a premium subscription valid for 1 year.",
+    "description": "faq description"
+  },
   "GXef+E": {
     "defaultMessage": "Clubs",
     "description": "Clubs title"
