--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,9 @@
     "defaultMessage": "Email",
     "description": "Email Button Title"
   },
+  "+KKyNc": {
+    "defaultMessage": "XP Earned:"
+  },
   "+PoBgu": {
     "defaultMessage": "{step}",
     "description": "take challenge instruction"
@@ -630,6 +633,9 @@
   "94ZC8v": {
     "defaultMessage": "Features",
     "description": "Features title"
+  },
+  "97bB5P": {
+    "defaultMessage": "{xp} xp"
   },
   "9BVOVU": {
     "defaultMessage": "Please verify to continue",
